--- a/scratch-Framework/test-output/emailable-report.html
+++ b/scratch-Framework/test-output/emailable-report.html
@@ -8,34 +8,105 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Facbook</th></tr>
-<tr><td><a href="#t0">Test2</a></td><td class="num">11</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">100,052</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">15,761</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Facbook</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test2 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Test.HomePageTest</td><td><a href="#m0">capturelogo</a></td><td rowspan="1">1676437475741</td><td rowspan="1">1179</td></tr><tr class="failedeven"><td><a href="#m1">compareLogoTest</a></td><td rowspan="1">1676437477691</td><td rowspan="1">1025</td></tr><tr class="failedodd"><td rowspan="1">Test.LoginPageTest</td><td><a href="#m2">LoginTest</a></td><td rowspan="1">1676437507834</td><td rowspan="1">21035</td></tr><tr><th colspan="4">Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">Test.HomePageTest</td><td><a href="#m3">VerifytitleTest</a></td><td rowspan="1">1676437475715</td><td rowspan="1">20</td></tr><tr class="passedeven"><td><a href="#m4">verifyCreateAccountbutton</a></td><td rowspan="1">1676437477355</td><td rowspan="1">52</td></tr><tr class="passedeven"><td><a href="#m5">verifyForgotpasswordlink</a></td><td rowspan="1">1676437477300</td><td rowspan="1">51</td></tr><tr class="passedeven"><td><a href="#m6">verifyLoginbutton</a></td><td rowspan="1">1676437477249</td><td rowspan="1">48</td></tr><tr class="passedeven"><td><a href="#m7">verifyPassworTextbox</a></td><td rowspan="1">1676437477190</td><td rowspan="1">56</td></tr><tr class="passedeven"><td><a href="#m8">verifyText</a></td><td rowspan="1">1676437477410</td><td rowspan="1">277</td></tr><tr class="passedeven"><td><a href="#m9">verifyUsernametextbox</a></td><td rowspan="1">1676437476931</td><td rowspan="1">255</td></tr><tr class="passedeven"><td><a href="#m10">verifyurlTest</a></td><td rowspan="1">1676437475640</td><td rowspan="1">62</td></tr><tr class="passedodd"><td rowspan="3">Test.LoginPageTest</td><td><a href="#m11">LoginTest</a></td><td rowspan="3">1676437529552</td><td rowspan="3">1738</td></tr><tr class="passedodd"><td><a href="#m12">LoginTest</a></td></tr><tr class="passedodd"><td><a href="#m13">LoginTest</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Test.LoginPageTest2</td><td><a href="#m0">compareLogoTest</a></td><td rowspan="1">1677389111320</td><td rowspan="1">267</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">Test.LoginPageTest2</td><td><a href="#m1">VerifyTitle</a></td><td rowspan="1">1677389110763</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m2">VerifyUrl</a></td><td rowspan="1">1677389110717</td><td rowspan="1">37</td></tr><tr class="passedeven"><td><a href="#m3">verifyCreateAccountbutton</a></td><td rowspan="1">1677389111101</td><td rowspan="1">73</td></tr><tr class="passedeven"><td><a href="#m4">verifyForgotpasswordlink</a></td><td rowspan="1">1677389111033</td><td rowspan="1">59</td></tr><tr class="passedeven"><td><a href="#m5">verifyLoginbutton</a></td><td rowspan="1">1677389110978</td><td rowspan="1">51</td></tr><tr class="passedeven"><td><a href="#m6">verifyPassworTextbox</a></td><td rowspan="1">1677389110906</td><td rowspan="1">68</td></tr><tr class="passedeven"><td><a href="#m7">verifyText</a></td><td rowspan="1">1677389111189</td><td rowspan="1">123</td></tr><tr class="passedeven"><td><a href="#m8">verifyUsernametextbox</a></td><td rowspan="1">1677389110783</td><td rowspan="1">111</td></tr></tbody>
 </table>
-<h2>Test2</h2><h3 id="m0">Test.HomePageTest#capturelogo</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.io.FileNotFoundException: File system element for parameter &apos;source&apos; does not exist: &apos;.\Screenshots\facebook.png&apos;
-	at org.apache.commons.io.FileUtils.requireExistsChecked(FileUtils.java:2719)
-	at org.apache.commons.io.FileUtils.requireFileCopy(FileUtils.java:2751)
-	at org.apache.commons.io.FileUtils.copyFile(FileUtils.java:840)
-	at org.apache.commons.io.FileUtils.copyFile(FileUtils.java:756)
-	at Test.HomePageTest.capturelogo(HomePageTest.java:60)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test.HomePageTest#compareLogoTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">javax.imageio.IIOException: Can&apos;t read input file!
-	at java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1310)
-	at Test.HomePageTest.compareLogoTest(HomePageTest.java:117)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Test.LoginPageTest#LoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>thorat959@gmail.com</td><td>Zxcvbnm1</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">org.openqa.selenium.StaleElementReferenceException: stale element reference: element is not attached to the page document
-  (Session info: chrome=110.0.5481.97)
-For documentation on this error, please visit: https://selenium.dev/exceptions/#stale_element_reference
+<h2>Default test</h2><h3 id="m0">Test.LoginPageTest2#compareLogoTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: org.openqa.selenium.JavascriptException: javascript error: el.offset is not a function
+  (Session info: chrome=110.0.5481.105)
 Build info: version: &apos;4.6.0&apos;, revision: &apos;79f1c02ae20&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.5&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [430a0654429989012ecc73e977152484, sendKeysToElement {id=33fcd9cf-8b33-4aa3-b727-f78d11d8a54e, value=[Ljava.lang.CharSequence;@3c232051}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 110.0.5481.97, chrome: {chromedriverVersion: 110.0.5481.77 (65ed616c6e8e..., userDataDir: C:\Users\pankaj\AppData\Loc...}, goog:chromeOptions: {debuggerAddress: localhost:60600}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:60600/devtoo..., se:cdpVersion: 110.0.5481.97, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on WINDOWS (430a0654429989012ecc73e977152484)] -&gt; xpath: //input[@name=&quot;email&quot;]]
-Session ID: 430a0654429989012ecc73e977152484
+Command: [54c3774146b8bb12252cc526167747a1, executeScript {script=function Coords(el) {
+    this.left = parseInt(el.offset().left);
+    this.top = parseInt(el.offset().top);
+    this.right = parseInt(this.left + el.outerWidth());
+    this.bottom = parseInt(this.top + el.outerHeight());
+}
+
+Coords.prototype.toString = function () {
+    var x = Math.max(this.left, 0);
+    var y = Math.max(this.top, 0);
+    return JSON.stringify({
+        x:x,
+        y:y,
+        width:this.right - x,
+        height:this.bottom - y
+    });
+};
+
+return [(new Coords($(arguments[0]))).toString()];
+, args=[{ELEMENT=3739114a-d57c-4569-88f0-3bd03dfb2d6b, element-6066-11e4-a52e-4f735466cecf=3739114a-d57c-4569-88f0-3bd03dfb2d6b}]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 110.0.5481.105, chrome: {chromedriverVersion: 110.0.5481.77 (65ed616c6e8e..., userDataDir: C:\Users\pankaj\AppData\Loc...}, goog:chromeOptions: {debuggerAddress: localhost:63158}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:63158/devtoo..., se:cdpVersion: 110.0.5481.105, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: 54c3774146b8bb12252cc526167747a1
+	at ru.yandex.qatools.ashot.util.InnerScript.execute(InnerScript.java:32)
+	at ru.yandex.qatools.ashot.util.JsCoords.findCoordsWithJquery(JsCoords.java:24)
+	at ru.yandex.qatools.ashot.coordinates.JqueryCoordsProvider.ofElement(JqueryCoordsProvider.java:14)
+	at ru.yandex.qatools.ashot.coordinates.CoordsProvider.ofElements(CoordsProvider.java:21)
+	at ru.yandex.qatools.ashot.AShot.takeScreenshot(AShot.java:116)
+	at ru.yandex.qatools.ashot.AShot.takeScreenshot(AShot.java:134)
+	at Test.LoginPageTest2.compareLogoTest(LoginPageTest2.java:106)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
+	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
+	at org.testng.internal.invokers.TestInvoker.invokeMethod(TestInvoker.java:677)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethod(TestInvoker.java:221)
+	at org.testng.internal.invokers.MethodRunner.runInSequence(MethodRunner.java:50)
+	at org.testng.internal.invokers.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:962)
+	at org.testng.internal.invokers.TestInvoker.invokeTestMethods(TestInvoker.java:194)
+	at org.testng.internal.invokers.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:148)
+	at org.testng.internal.invokers.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at org.testng.TestRunner.privateRun(TestRunner.java:806)
+	at org.testng.TestRunner.run(TestRunner.java:601)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:433)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:427)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:387)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:330)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:95)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1256)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1176)
+	at org.testng.TestNG.runSuites(TestNG.java:1099)
+	at org.testng.TestNG.run(TestNG.java:1067)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+Caused by: org.openqa.selenium.JavascriptException: javascript error: el.offset is not a function
+  (Session info: chrome=110.0.5481.105)
+Build info: version: &apos;4.6.0&apos;, revision: &apos;79f1c02ae20&apos;
+System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.5&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [54c3774146b8bb12252cc526167747a1, executeScript {script=function Coords(el) {
+    this.left = parseInt(el.offset().left);
+    this.top = parseInt(el.offset().top);
+    this.right = parseInt(this.left + el.outerWidth());
+    this.bottom = parseInt(this.top + el.outerHeight());
+}
+
+Coords.prototype.toString = function () {
+    var x = Math.max(this.left, 0);
+    var y = Math.max(this.top, 0);
+    return JSON.stringify({
+        x:x,
+        y:y,
+        width:this.right - x,
+        height:this.bottom - y
+    });
+};
+
+return [(new Coords($(arguments[0]))).toString()];
+, args=[{ELEMENT=3739114a-d57c-4569-88f0-3bd03dfb2d6b, element-6066-11e4-a52e-4f735466cecf=3739114a-d57c-4569-88f0-3bd03dfb2d6b}]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 110.0.5481.105, chrome: {chromedriverVersion: 110.0.5481.77 (65ed616c6e8e..., userDataDir: C:\Users\pankaj\AppData\Loc...}, goog:chromeOptions: {debuggerAddress: localhost:63158}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:63158/devtoo..., se:cdpVersion: 110.0.5481.105, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: 54c3774146b8bb12252cc526167747a1
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
+	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
+	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
 	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
@@ -43,21 +114,17 @@ Session ID: 430a0654429989012ecc73e977152484
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:541)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:257)
-	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:113)
-	at Test.LoginPageTest.LoginTest(LoginPageTest.java:27)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Test.HomePageTest#VerifytitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Test.HomePageTest#verifyCreateAccountbutton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">Test.HomePageTest#verifyForgotpasswordlink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">Test.HomePageTest#verifyLoginbutton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">Test.HomePageTest#verifyPassworTextbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">Test.HomePageTest#verifyText</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">Test.HomePageTest#verifyUsernametextbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">Test.HomePageTest#verifyurlTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">Test.LoginPageTest#LoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>7517476426</td><td>Zxcvbnm1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">Test.LoginPageTest#LoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>7517476426</td><td>Rahul@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">Test.LoginPageTest#LoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>thorat959@gmail.com</td><td>Rahul@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at org.openqa.selenium.remote.RemoteWebDriver.executeScript(RemoteWebDriver.java:478)
+	at ru.yandex.qatools.ashot.util.InnerScript.execute(InnerScript.java:30)
+	... 34 more
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.LoginPageTest2#VerifyTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.LoginPageTest2#VerifyUrl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Test.LoginPageTest2#verifyCreateAccountbutton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Test.LoginPageTest2#verifyForgotpasswordlink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Test.LoginPageTest2#verifyLoginbutton</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Test.LoginPageTest2#verifyPassworTextbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Test.LoginPageTest2#verifyText</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Test.LoginPageTest2#verifyUsernametextbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
