--- a/scratch-Framework/test-output/old/Default suite/methods-alphabetical.html
+++ b/scratch-Framework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6aa2c3">  <td>23/02/15 10:27:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.compareLogoTest()[pri:10, instance:Test.HomePageTest@2462cb01]">compareLogoTest</td> 
-  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="6aa2c3">  <td>23/02/15 10:27:35</td>   <td>-13677</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:Test.HomePageTest@2462cb01]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
-<tr bgcolor="6aa2c3">  <td>23/02/15 10:27:49</td>   <td>519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:Test.HomePageTest@2462cb01]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@965586344</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.VerifyTitle()[pri:2, instance:Test.LoginPageTest2@7d7758be]">VerifyTitle</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:10</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.VerifyUrl()[pri:1, instance:Test.LoginPageTest2@7d7758be]">VerifyUrl</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="b980df">  <td>23/02/26 10:55:13</td>   <td>2365</td> <td title="&lt;&lt;BaseClass.afterSuit()[pri:0, instance:Test.LoginPageTest2@7d7758be]">&lt;&lt;afterSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:11</td>   <td>557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.compareLogoTest()[pri:9, instance:Test.LoginPageTest2@7d7758be]">compareLogoTest</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="b980df">  <td>23/02/26 10:54:56</td>   <td>-13923</td> <td title="&gt;&gt;BaseClass.loadConfig()[pri:0, instance:Test.LoginPageTest2@7d7758be]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:54:57</td>   <td>-13419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest2.setup()[pri:0, instance:Test.LoginPageTest2@7d7758be]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:11</td>   <td>846</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest2.tearDown()[pri:0, instance:Test.LoginPageTest2@7d7758be]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:11</td>   <td>338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyCreateAccountbutton()[pri:7, instance:Test.LoginPageTest2@7d7758be]">verifyCreateAccountbutton</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:11</td>   <td>270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyForgotpasswordlink()[pri:6, instance:Test.LoginPageTest2@7d7758be]">verifyForgotpasswordlink</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:10</td>   <td>215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyLoginbutton()[pri:5, instance:Test.LoginPageTest2@7d7758be]">verifyLoginbutton</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:10</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyPassworTextbox()[pri:4, instance:Test.LoginPageTest2@7d7758be]">verifyPassworTextbox</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:11</td>   <td>426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyText()[pri:8, instance:Test.LoginPageTest2@7d7758be]">verifyText</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
+<tr bgcolor="e29ed9">  <td>23/02/26 10:55:10</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest2.verifyUsernametextbox()[pri:3, instance:Test.LoginPageTest2@7d7758be]">verifyUsernametextbox</td> 
+  <td>main@1595938139</td>   <td></td> </tr>
 </table>
