--- a/scratch-Framework/test-output/old/Suite/classes.html
+++ b/scratch-Framework/test-output/old/Suite/classes.html
@@ -4,6 +4,36 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>Test.LoginPageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>Test.LoginPageTest2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -19,11 +49,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUsernametextbox</td>
+<td>VerifyTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyTitle</td>
+<td>verifyUsernametextbox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
